trunk/Archive2/92/9e8052417bd220/output
main.cpp: In function 'int main()':
main.cpp:21:29: error: variable 'std::ifstream backstory' has initializer but incomplete type
     std::ifstream backstory ("backstory.txt");
                             ^
main.cpp:25:22: error: 'line' was not declared in this scope
    getline(backstory,line);
                      ^
main.cpp:26:13: error: 'x' was not declared in this scope
             x.push_back(line);
             ^
